--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
             <li><a href="{{ url_for('register') }}">{{ 'Register' }}</a></li>
             {% else %}
             <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
+            <a href="{{ url_for('upload') }}">Upload</a>
             <li><a href="{{ url_for('logout') }}">{{ 'Logout' }}</a></li>
             {% endif %}
         </div>
