--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hello... is any file there?</h1>
+    <h1>Error 403: Forbidden page</h1>
     <p><a href="{{ url_for('index') }}">Back</a></p>
 {% endblock %}
