--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
    <body>
       <form method="POST" enctype="multipart/form-data">
          {{ form.hidden_tag() }}
