--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,25 +1,11 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-   <body>
-      <form method="POST" enctype="multipart/form-data">
-         {{ form.hidden_tag() }}
-         {{ form.csrf_token }}
-         <p>{{ form.file.label }}</p>
-         <p>{{ form.file(size=32) }}</p>
-         {% for error in form.file.errors %}
-         <span style="color: red;">[{{ error }}]</span>
-         {% endfor %}
-         <p>{{ form.project_or_user.label }}</p>
-         {% for subfield in form.project_or_user %}
-            <tr>
-               <td>{{ subfield }}</td>
-               <td>{{ subfield.label }}</td>
-            </tr>
-         {% endfor %}
-         <p>{{ form.project_name.label }}
-            {{ form.project_name }}</p>
-         <p>{{ form.submit() }}</p>
-      </form>
-   </body>
+   <h1>Upload Data</h1>
+      <div class="row">
+         <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+         </div>
+    </div>
 {% endblock %}
