--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,7 @@
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('login') }}">Login</a></li>
                     {% else %}
+                    <li><a href="{{ url_for('new_project') }}">New Project</a></li>
                     <li><a href="{{ url_for('upload') }}">Upload</a></li>
                     <li><a href="{{ url_for('user', username=current_user.username) }}">Profile</a></li>
                     <li><a href="{{ url_for('logout') }}">Logout</a></li>
