--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 {% extends 'bootstrap/base.html' %}
 
 {% block title %}
-    {% if title %}{{ title }} - Microblog{% else %}Welcome to Microblog{% endif %}
+    {% if title %}{{ title }} - Template{% else %}Welcome to Jesse's Template{% endif %}
 {% endblock %}
 
 {% block navbar %}
@@ -27,6 +27,7 @@
                     <li><a href="{{ url_for('new_project') }}">New Project</a></li>
                     <li><a href="{{ url_for('upload') }}">Upload</a></li>
                     <li><a href="{{ url_for('user', username=current_user.username) }}">Profile</a></li>
+                    <li><a href="{{ url_for('rest') }}">rest</a></li>
                     <li><a href="{{ url_for('logout') }}">Logout</a></li>
                     {% endif %}
                 </ul>
