--- a/app/static/styles/rest.css
+++ b/app/static/styles/rest.css
@@ -1,3 +1,22 @@
 .tab { margin-left: 40px; }
 .tab2 { margin-left: 60px; }
 .tab3 { margin-left: 80px; }
+
+// code block replaced by js package : https://highlightjs.org/download/
+pre {
+    background: #f4f4f4;
+    border: 1px solid #ddd;
+    border-left: 3px solid #f36d33;
+    color: #666;
+    page-break-inside: avoid;
+    font-family: monospace;
+    font-size: 15px;
+    line-height: 1.6;
+    margin-bottom: 1.6em;
+    max-width: 100%;
+    overflow: auto;
+    padding: 1em 1.5em;
+    display: block;
+    word-wrap: break-word;
+}
+
